{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 93,
  "lineage": "7eb630a1-d855-1183-2d19-e29df147f12d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jy_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-017d45e09cce31654",
            "arn": "arn:aws:ec2:ap-northeast-2:966600044384:elastic-ip/eipalloc-017d45e09cce31654",
            "association_id": "eipassoc-05ce99535d6938a2a",
            "domain": "vpc",
            "id": "eipalloc-017d45e09cce31654",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-063ebc7c7794e0d89",
            "private_dns": "ip-10-0-1-161.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.161",
            "public_dns": "ec2-13-209-124-103.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.209.124.103",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jy-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:966600044384:internet-gateway/igw-0ee29262c09aed459",
            "id": "igw-0ee29262c09aed459",
            "owner_id": "966600044384",
            "tags": {
              "Name": "jy-igw"
            },
            "tags_all": {
              "Name": "jy-igw"
            },
            "vpc_id": "vpc-0f9425129ba2427eb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "jy_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-017d45e09cce31654",
            "association_id": "eipassoc-05ce99535d6938a2a",
            "connectivity_type": "public",
            "id": "nat-081be88b1552478be",
            "network_interface_id": "eni-063ebc7c7794e0d89",
            "private_ip": "10.0.1.161",
            "public_ip": "13.209.124.103",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-017b0f621501aa924",
            "tags": {
              "Name": "jy-ngw"
            },
            "tags_all": {
              "Name": "jy-ngw"
            }
          },
          "dependencies": [
            "aws_eip.jy_nat_eip",
            "aws_subnet.public_subnet_01",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c54a91456259b7481080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-081be88b1552478be",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c54a91456259b748",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.jy_nat_eip",
            "aws_nat_gateway.jy_ngw",
            "aws_route_table.private_route_table",
            "aws_subnet.public_subnet_01",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ee29262c09aed459",
            "id": "r-rtb-09eb3bb678c5e94c51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09eb3bb678c5e94c5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.jy-igw",
            "aws_route_table.public_route_table",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:966600044384:route-table/rtb-0c54a91456259b748",
            "id": "rtb-0c54a91456259b748",
            "owner_id": "966600044384",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-081be88b1552478be",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jy-private-rt"
            },
            "tags_all": {
              "Name": "jy-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9425129ba2427eb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:966600044384:route-table/rtb-09eb3bb678c5e94c5",
            "id": "rtb-09eb3bb678c5e94c5",
            "owner_id": "966600044384",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "jy-public-rt"
            },
            "tags_all": {
              "Name": "jy-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9425129ba2427eb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f597c791b8442084",
            "route_table_id": "rtb-0c54a91456259b748",
            "subnet_id": "subnet-0d8eae9c3388da559"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.front_private_subnet_01",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dfd4643ee9021158",
            "route_table_id": "rtb-0c54a91456259b748",
            "subnet_id": "subnet-0cc597b9625bc58f2"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.front_private_subnet_02",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ffffebd569036ca9",
            "route_table_id": "rtb-0c54a91456259b748",
            "subnet_id": "subnet-0478a1070ccce356b"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.back_private_subnet_01",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf3956d44872dc45",
            "route_table_id": "rtb-0c54a91456259b748",
            "subnet_id": "subnet-01764751e206d4fae"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.back_private_subnet_02",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4db6c4ac4854f02",
            "route_table_id": "rtb-09eb3bb678c5e94c5",
            "subnet_id": "subnet-017b0f621501aa924"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_01",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a927ba0c1426e0f",
            "route_table_id": "rtb-09eb3bb678c5e94c5",
            "subnet_id": "subnet-0bd2e8ce9eec65d90"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_02",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "back_private_subnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:966600044384:subnet/subnet-0478a1070ccce356b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0478a1070ccce356b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "966600044384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jy-back-private-subnet-1"
            },
            "tags_all": {
              "Name": "jy-back-private-subnet-1"
            },
            "vpc_id": "vpc-0f9425129ba2427eb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "back_private_subnet_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:966600044384:subnet/subnet-01764751e206d4fae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01764751e206d4fae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "966600044384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jy-back-private-subnet-2"
            },
            "tags_all": {
              "Name": "jy-back-private-subnet-2"
            },
            "vpc_id": "vpc-0f9425129ba2427eb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "front_private_subnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:966600044384:subnet/subnet-0d8eae9c3388da559",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8eae9c3388da559",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "966600044384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jy-front-private-subnet-1"
            },
            "tags_all": {
              "Name": "jy-front-private-subnet-1"
            },
            "vpc_id": "vpc-0f9425129ba2427eb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "front_private_subnet_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:966600044384:subnet/subnet-0cc597b9625bc58f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc597b9625bc58f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "966600044384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jy-front-private-subnet-2"
            },
            "tags_all": {
              "Name": "jy-front-private-subnet-2"
            },
            "vpc_id": "vpc-0f9425129ba2427eb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:966600044384:subnet/subnet-017b0f621501aa924",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017b0f621501aa924",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "966600044384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jy-public-subnet-1"
            },
            "tags_all": {
              "Name": "jy-public-subnet-1"
            },
            "vpc_id": "vpc-0f9425129ba2427eb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:966600044384:subnet/subnet-0bd2e8ce9eec65d90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd2e8ce9eec65d90",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "966600044384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jy-public-subnet-2"
            },
            "tags_all": {
              "Name": "jy-public-subnet-2"
            },
            "vpc_id": "vpc-0f9425129ba2427eb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:966600044384:vpc/vpc-0f9425129ba2427eb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bf1f81b8463ae8bf",
            "default_route_table_id": "rtb-0a73a6a061c36f684",
            "default_security_group_id": "sg-0b94a6d1206209923",
            "dhcp_options_id": "dopt-cf6917a4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f9425129ba2427eb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a73a6a061c36f684",
            "owner_id": "966600044384",
            "tags": {
              "Name": "jy-vpc"
            },
            "tags_all": {
              "Name": "jy-vpc"
            }
          }
        }
      ]
    }
  ]
}